--- a/status.html
+++ b/status.html
@@ -175,7 +175,7 @@
         Flexa Status
       </h1>
       <h1
-        class="text-center text-[#ff414b] dark:text-[#ff414b] text-[35px] font-[1000]">
+        class="text-center dark:text-[#848482] text-[#000000] text-[35px] font-[1000]">
         Sharding currently offline
       </h1>
       <div>
