--- a/home.html
+++ b/home.html
@@ -577,14 +577,18 @@
     <!-- Advertisements -->
     <div class="flex justify-center">
       <div class="grid grid-cols-2 gap-5">
-        <img
-          src="./images/ads/YourAdHere-RectangleFG.png"
-          class="w-auto h-auto"
-          alt="Ad 1" />
-        <img
-          src="./images/ads/YourAdHere-RectangleFG.png"
-          class="w-auto h-auto"
-          alt="Ad 2" />
+        <a href="https://admanager.flexagroup.co.uk" target="_blank"
+          ><img
+            src="./images/ads/YourAdHere-RectangleFG.png"
+            class="w-auto h-auto"
+            alt="Ad 1"
+        /></a>
+        <a href="https://admanager.flexagroup.co.uk" target="_blank"
+          ><img
+            src="./images/ads/YourAdHere-RectangleFG.png"
+            class="w-auto h-auto"
+            alt="Ad 2"
+        /></a>
       </div>
     </div>
     <br />
