--- a/status.html
+++ b/status.html
@@ -229,72 +229,45 @@
     </div>
 
     <!-- Cluster Grid -->
-    <div class="justify-center items-center ml-10">
-      <div class="cluster-grid">
-        <div
-          class="cluster-grid-item dark:text-[#848482] text-[#000000]"
-          data-cluster="0">
-          0
-          <div class="cluster-popup" id="popup-0">
-            <div>Cluster 0</div>
-            <div>Shards: 0 - 5</div>
-            <div>Uptime: <span id="uptime-0"></span></div>
-            <div><strong>0 Shard(s) unavailable</strong></div>
-          </div>
-        </div>
-        <div
-          class="cluster-grid-item dark:text-[#848482] text-[#000000]"
-          data-cluster="1">
-          1
-          <div class="cluster-popup" id="popup-1">
-            <div>Cluster 1</div>
-            <div>Shards: 6 - 11</div>
-            <div>Uptime: <span id="uptime-1"></span></div>
-            <div><strong>0 Shard(s) unavailable</strong></div>
-          </div>
-        </div>
-        <div
-          class="cluster-grid-item dark:text-[#848482] text-[#000000]"
-          data-cluster="2">
-          2
-          <div class="cluster-popup" id="popup-2">
-            <div>Cluster 2</div>
-            <div>Shards: 12 - 17</div>
-            <div>Uptime: <span id="uptime-2"></span></div>
-            <div><strong>0 Shard(s) unavailable</strong></div>
-          </div>
-        </div>
-        <div
-          class="cluster-grid-item dark:text-[#848482] text-[#000000]"
-          data-cluster="3">
-          3
-          <div class="cluster-popup" id="popup-3">
-            <div>Cluster 3</div>
-            <div>Shards: 18 - 23</div>
-            <div>Uptime: <span id="uptime-3"></span></div>
-            <div><strong>0 Shard(s) unavailable</strong></div>
-          </div>
-        </div>
-        <div
-          class="cluster-grid-item dark:text-[#848482] text-[#000000]"
-          data-cluster="4">
-          4
-          <div class="cluster-popup" id="popup-4">
-            <div>Cluster 4</div>
-            <div>Shards: 24 - 29</div>
-            <div>Uptime: <span id="uptime-4"></span></div>
-            <div><strong>0 Shard(s) unavailable</strong></div>
-          </div>
-        </div>
-        <div
-          class="cluster-grid-item dark:text-[#848482] text-[#000000]"
-          data-cluster="5">
-          5
-          <div class="cluster-popup" id="popup-5">
-            <div>Cluster 5</div>
-            <div>Shards: 30 - 35</div>
-            <div>Uptime: <span id="uptime-5"></span></div>
-            <div><strong>0 Shard(s) unavailable</strong></div>
+    <div class="ml-7">
+      <div class="ml-20">
+        <div class="ml-20">
+          <div class="justify-center ml-20 items-center">
+            <div class="cluster-grid">
+              <div
+                class="cluster-grid-item dark:text-[#848482] text-[#000000]"
+                data-cluster="0">
+                0
+                <div class="cluster-popup" id="popup-0">
+                  <div>Cluster 0</div>
+                  <div>Shards: 0 - 5</div>
+                  <div>Uptime: <span id="uptime-0"></span></div>
+                  <div><strong>0 Shard(s) unavailable</strong></div>
+                </div>
+              </div>
+              <div
+                class="cluster-grid-item dark:text-[#848482] text-[#000000]"
+                data-cluster="1">
+                1
+                <div class="cluster-popup" id="popup-1">
+                  <div>Cluster 1</div>
+                  <div>Shards: 6 - 11</div>
+                  <div>Uptime: <span id="uptime-1"></span></div>
+                  <div><strong>0 Shard(s) unavailable</strong></div>
+                </div>
+              </div>
+              <div
+                class="cluster-grid-item dark:text-[#848482] text-[#000000]"
+                data-cluster="2">
+                2
+                <div class="cluster-popup" id="popup-2">
+                  <div>Cluster 2</div>
+                  <div>Shards: 12 - 17</div>
+                  <div>Uptime: <span id="uptime-2"></span></div>
+                  <div><strong>0 Shard(s) unavailable</strong></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
