--- a/adhome.html
+++ b/adhome.html
@@ -15,8 +15,6 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </head>
   <script src="scripts/alert.js"></script>
-  <script src="scripts/server.js"></script>
-
   <audio id="alert-sound" src="./scripts/alert.mp3" preload="auto"></audio>
   <body>
     <div class="flex items-center justify-between gap-4 px-5 mt-4">
@@ -46,24 +44,23 @@
         </p>
       </div>
     </div>
-    <div class="flex justify-center items-center h-screen">
-      <embed
-        src="https://flexa.raiseaticket.com/support/#/newticket"
-        class="w-4/5 h-4/5 md:w-3/5 md:h-3/5 lg:w-1/2 lg:h-1/2" />
-    </div>
     <br />
     <br />
     <!-- Advertisements -->
     <div class="flex justify-center">
       <div class="grid grid-cols-2 gap-5">
-        <img
-          src="./images/ads/YourAdHere-RectangleFG.png"
-          class="w-auto h-auto"
-          alt="Ad 1" />
-        <img
-          src="./images/ads/YourAdHere-RectangleFG.png"
-          class="w-auto h-auto"
-          alt="Ad 2" />
+        <a href="mailto:support@flexagroup.co.uk"
+          ><img
+            src="./images/ads/YourAdHere-RectangleFG.png"
+            class="w-auto h-auto"
+            alt="Ad 1"
+        /></a>
+        <a href="mailto:support@flexagroup.co.uk"
+          ><img
+            src="./images/ads/YourAdHere-RectangleFG.png"
+            class="w-auto h-auto"
+            alt="Ad 2"
+        /></a>
       </div>
     </div>
     <br />
