--- a/blogs.html
+++ b/blogs.html
@@ -65,7 +65,7 @@
             color: gray;
           }
           50% {
-            color: #ff414b;
+            color: #000000;
           }
           100% {
             color: gray;
