--- a/breaking-down-our-future-projects.html
+++ b/breaking-down-our-future-projects.html
@@ -85,7 +85,7 @@
             color: gray;
           }
           50% {
-            color: #ff414b;
+            color: #000000;
           }
           100% {
             color: gray;
