--- a/careers.html
+++ b/careers.html
@@ -58,7 +58,7 @@
             color: gray;
           }
           50% {
-            color: #ff414b;
+            color: #000000;
           }
           100% {
             color: gray;
