--- a/store.html
+++ b/store.html
@@ -78,7 +78,7 @@
             color: gray;
           }
           50% {
-            color: #ff414b;
+            color: #000000;
           }
           100% {
             color: gray;
