--- a/home.html
+++ b/home.html
@@ -575,7 +575,11 @@
     </div>
 
     <!-- Advertisements -->
-    <div class="flex justify-center">
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5123275890341776"
+      crossorigin="anonymous"></script>
+    <!-- <div class="flex justify-center">
       <div class="grid grid-cols-2 gap-5">
         <a href="https://admanager.flexagroup.co.uk" target="_blank"
           ><img
@@ -590,7 +594,7 @@
             alt="Ad 2"
         /></a>
       </div>
-    </div>
+    </div> -->
     <br />
     <div class="flex items-center justify-center">
       <h1 class="text-center">
