--- a/home.html
+++ b/home.html
@@ -573,7 +573,7 @@
       </div>
       <!-- End Popups -->
     </div>
-
+    <meta name="google-adsense-account" content="ca-pub-5123275890341776" />
     <!-- Advertisements -->
     <script
       async
