--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
             color: gray;
           }
           50% {
-            color: #000000;
+            color: #01e6ce;
           }
           100% {
             color: gray;
