--- a/status.html
+++ b/status.html
@@ -58,7 +58,7 @@
       }
 
       .cluster-grid-item[data-cluster="0"] {
-        color: #000000; /* Change color for cluster 1 */
+        color: #01e6ce; /* Change color for cluster 1 */
       }
       .cluster-grid-item[data-cluster="1"] {
         color: #000000; /* Change color for cluster 1 */
@@ -94,7 +94,7 @@
             color: gray;
           }
           50% {
-            color: #000000;
+            color: #01e6ce;
           }
           100% {
             color: gray;
