--- a/store.html
+++ b/store.html
@@ -78,7 +78,7 @@
             color: gray;
           }
           50% {
-            color: #000000;
+            color: #01e6ce;
           }
           100% {
             color: gray;
@@ -434,11 +434,11 @@
     </div>
 
     <!-- Footer -->
-    <div class="mt-8">
+    <div class="mb-20">
       <div
-        class="flex flex-col mt-1 flex-wrap gap-2 p-5 items-center justify-center text-center text-[#0041a5] dark:text-[#5267ff] text-sm">
+        class="flex flex-col mb-20 flex-wrap gap-2 p-5 items-center justify-center text-center text-[#0041a5] dark:text-[#5267ff] text-sm">
         <div
-          class="flex gap-4 mt-1 items-center justify-center flex-wrap transition-opacity duration-500 opacity-0"
+          class="flex gap-4 mb-20 items-center justify-center flex-wrap transition-opacity duration-500 opacity-0"
           id="footer">
           <p>
             Flexa Bot: Empowering Communities | Copyright 2024 © Flexa Group.
