--- a/sp-appeals.html
+++ b/sp-appeals.html
@@ -230,7 +230,7 @@
           <div>
             <h class="text-3xl text-center">Solar Projects Appeal Services</h>
             <br>
-            <h1>This appeal form closes on XX/XX/XXXX at XX:XX</h1>
+            <h1>This appeal form closes on 01/08/2024 at 00:00 UTC+0</h1>
             <p>The star symbol * means required.</p>
             <form
               class="my-3 gap-2 flex flex-col justify-center"
