--- a/status.html
+++ b/status.html
@@ -179,13 +179,13 @@
         Sharding currently offline
       </h1>
       <div>
-        <p1 class="text-[25px] text-black dark:text-white">30/90 shards</p1
+        <p1 class="text-[25px] text-black dark:text-white">90/90 shards</p1
         ><br />
         <p2 class="text-[15px] text-black dark:text-white"
-          >2/3 clusters have problems</p2
+          >3/3 clusters have problems</p2
         ><br />
         <p2 class="text-[15px] text-black dark:text-white"
-          >Cluster Uptime: <span id="uptime-0"></span></p2
+          >Cluster Uptime: Offline</p2
         ><br />
         <!-- <span id="uptime-0"></span> -->
         <p2 class="text-[30px] text-black dark:text-white"
@@ -234,7 +234,7 @@
           <div class="justify-center ml-20 items-center">
             <div class="cluster-grid">
               <div
-                class="cluster-grid-item dark:text-[#01e6ce] text-[#01e6ce]"
+                class="cluster-grid-item dark:text-[#848482] text-[#000000]"
                 data-cluster="0">
                 0
                 <div class="cluster-popup" id="popup-0">
