--- a/home.html
+++ b/home.html
@@ -363,17 +363,25 @@
               Our Holidays
             </button>
           </a>
-          <a
-          href="./solar-projects.html"
-          target="_blank">
-          <button
-            class="w-full rounded-md border border-[#f53535] dark:border-[#ff8456] py-2.5 px-14 hover:bg-[#ff8456] hover:dark:bg-[#f53535] hover:border-[#c9d6db] hover-dark:border-[#5267ff] hover:text-[#f53535] hover:dark:text-[#ff8456] transition-colors duration-500 text-[#ff8456] dark:text-[#f53535]">
-            Solar Projects
-          </button>
-        </a>
         </div>
       </div>
       <!-- End Buttons -->
+
+      <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+        var Tawk_API = Tawk_API || {},
+          Tawk_LoadStart = new Date();
+        (function () {
+          var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+          s1.async = true;
+          s1.src = "https://embed.tawk.to/667b27fb9d7f358570d3538a/1i18h8c71";
+          s1.charset = "UTF-8";
+          s1.setAttribute("crossorigin", "*");
+          s0.parentNode.insertBefore(s1, s0);
+        })();
+      </script>
+      <!--End of Tawk.to Script-->
 
       <!-- Developers -->
       <div>
