--- a/blogs.html
+++ b/blogs.html
@@ -77,6 +77,21 @@
           animation: flash 1s infinite;
         }
       </style>  <audio id="alert-sound" src="./scripts/alert.mp3" preload="auto"></audio>
+            <!--Start of Tawk.to Script-->
+            <script type="text/javascript">
+              var Tawk_API = Tawk_API || {},
+                Tawk_LoadStart = new Date();
+              (function () {
+                var s1 = document.createElement("script"),
+                  s0 = document.getElementsByTagName("script")[0];
+                s1.async = true;
+                s1.src = "https://embed.tawk.to/667b27fb9d7f358570d3538a/1i18h8c71";
+                s1.charset = "UTF-8";
+                s1.setAttribute("crossorigin", "*");
+                s0.parentNode.insertBefore(s1, s0);
+              })();
+            </script>
+            <!--End of Tawk.to Script-->
     <script src="scripts/alert.js"></script>
     <script src="scripts/server.js"></script>
 
